third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/inlining/acquires_error_msg_inline.exp
module 0x42::test {
    struct Test has key {
        value: u64,
    }
    public fun call_modify_without_acquire() {
        &mut borrow_global_mut(0xcafe).value = 2;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
  ┌─ acquires_error_msg_inline.move:6:9
  │
6 │         &mut borrow_global_mut(0xcafe).value = 2;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
